--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <i>📞</i> <span>01791134834</span>
                     </div>
                     <div class="info-item">
-                        <i>📍</i> <span>Mirpur 11</span>
+                        <i>📍</i> <span>Mirpur section 11</span>
                     </div>
                     <div class="info-item">
                         <i>🌐</i> <a href="https://facebook.com/fahim.af.75" target="_blank">facebook.com/fahim.af.75</a>
